[package]
name = "toml2json"
description = "Convert TOML to JSON"
license = "MIT"
version = "0.1.0"
authors = ["zhanghan <zhanghan@163.com>"]
edition = "2021"
homepage = "https://github.com/zhopen/toml2json"
readme = "README.md"
keywords = ["cli", "toml", "json"]
categories = ["command-line-utilities", "development-tools", "encoding"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
anyhow = "1.0.56"
toml = "0.5.9"
serde = "1.0.137"
serde_json = "1.0.81"